Update GraphQlRequestPredicates to map application/graphql content
Closes gh-948